--- a/.github/workflows/test-macos-pkg.yml
+++ b/.github/workflows/test-macos-pkg.yml
@@ -79,26 +79,49 @@ jobs:
         env:
           DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY }}
 
-      - name: Build & Sign pkg
+      - name: Build pkg
         run: |
           # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
           xcrun pkgbuild --component "./PicGuard.app" --install-location /Applications --sign "$DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY" PicGuard-unsigned.pkg
-          xcrun productbuild --package PicGuard-unsigned.pkg --sign "$DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY" PicGuard.pkg
+          mv PicGuard-unsigned.pkg "$GITHUB_WORKSPACE/PicGuard-unsigned.pkg"
         env:
           DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY }}
         working-directory: build/macos/Build/Products/Release-free
 
       - uses: actions/upload-artifact@v4
         with:
+          name: unsigned-pkg-artifact
+          path: ./PicGuard-unsigned.pkg
+
+      - name: Building distribution file
+        run: |
+          xcrun productbuild --synthesize --product macos/packaging/pkg/requirements --package PicGuard-unsigned.pkg distribution.dist
+          sed -i '' '2 a\
+          \    <title>PicGuard</title>\
+          \    <license file="eula.rtf"/>\
+          ' distribution.dist
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: distribution-artifact
+          path: ./distribution.dist
+
+      - name: Sign pkg
+        run: |
+          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
+          xcrun productbuild --distribution distribution.dist --resources macos/packaging/base --sign "$DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY" PicGuard.pkg
+        env:
+          DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY }}
+
+      - uses: actions/upload-artifact@v4
+        with:
           name: pkg-artifact
-          path: |
-            ./build/macos/Build/Products/Release-free/PicGuard.pkg
+          path: ./PicGuard.pkg
 
 #      - name: Check sign status
 #        run: |
 #          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
 #          pkgutil –-check-signature PicGuard.pkg
-#        working-directory: build/macos/Build/Products/Release-free
 
       - name: Notarize & Staple
         run: |
@@ -113,7 +136,6 @@ jobs:
           # validated by macOS even when an internet connection is not available.
           echo "Attach staple"
           xcrun stapler staple "PicGuard.pkg"
-        working-directory: build/macos/Build/Products/Release-free
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
@@ -132,17 +154,16 @@ jobs:
         run: |
           echo "$VERSION"
           ls -la *.pkg
-          rm -f PicGuard-unsigned.pkg
+          test -f PicGuard-unsigned.pkg && rm -f PicGuard-unsigned.pkg
           mv PicGuard.pkg PicGuard_"$VERSION"_macos_universal.pkg
           ls -la *.pkg
-        working-directory: build/macos/Build/Products/Release-free
         env:
           VERSION: ${{ steps.version_step.outputs.version }}
 
       - uses: actions/upload-artifact@v4
         with:
-          name: macos-pkg-artifact
-          path: ./build/macos/Build/Products/Release-free/*.pkg
+          name: stapled-pkg-artifact
+          path: ./*.pkg
 
       - name: Clean up
         if: ${{ always() }}
