--- a/.github/workflows/test-windows-msix-free.yml
+++ b/.github/workflows/test-windows-msix-free.yml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Crate msix
         run: |
-          dart run msix:create --build-windows false --output-name "picguard_$env:VERSION`-free_windows_x64"
+          dart run msix:create --build-windows false --output-name "picguard_$env:VERSION`_windows_x64"
         env:
           VERSION: ${{ needs.get-version.outputs.version }}
 
