--- a/.github/workflows/test-macos-tar.yml
+++ b/.github/workflows/test-macos-tar.yml
@@ -118,13 +118,16 @@ jobs:
 
       # Package the build.
       - name: Copy build for tar
-        run: ls -la *.tar.gz
+        run: |
+          ls -la *.tar.gz
+          test -f PicGuard.zip && rm -f PicGuard.zip
+          mv *.tar.gz $GITHUB_WORKSPACE/
         working-directory: build/macos/Build/Products/Release-free
 
       - uses: actions/upload-artifact@v4
         with:
           name: macos-tar-artifact
-          path: ./build/macos/Build/Products/Release-free/*.tar.gz
+          path: ./*.tar.gz
 
       - name: Clean up
         if: ${{ always() }}
