--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -379,8 +379,8 @@ jobs:
       - name: copy LICENSE to the windows folder
         run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
 
-      - name: Install flutter_distributor
-        run: dart pub global activate flutter_distributor
+      - name: Install fastforge
+        run: dart pub global activate fastforge
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -390,7 +390,7 @@ jobs:
 
       - name: Build zip
         run: |
-          flutter_distributor package `
+          fastforge package `
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
             --platform windows `
             --targets zip `
