--- a/.github/workflows/test-linux-rpm-arm64.yml
+++ b/.github/workflows/test-linux-rpm-arm64.yml
@@ -39,8 +39,8 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Install flutter_distributor
-        run: dart pub global activate flutter_distributor
+      - name: Install fastforge
+        run: dart pub global activate fastforge
 
       - name: Install yq
         run: |
@@ -56,7 +56,7 @@ jobs:
 
       - name: Build RPM
         run: |
-          flutter_distributor package \
+          fastforge package \
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
             --platform linux \
             --targets rpm \
