--- a/linux/packaging/appimage/make_config.yaml
+++ b/linux/packaging/appimage/make_config.yaml
@@ -31,7 +31,7 @@ startup_notify: true
 
 # You can specify the shared libraries that you want to bundle with your app
 #
-# flutter_distributor automatically detects the shared libraries that your app
+# fastforge automatically detects the shared libraries that your app
 # depends on, but you can also specify them manually here.
 #
 # The following example shows how to bundle the libcurl library with your app.
