--- a/.github/workflows/test-linux-deb.yml
+++ b/.github/workflows/test-linux-deb.yml
@@ -19,6 +19,11 @@ jobs:
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
 
+      - name: Install ayatana-appindicator3-0.1
+        run: |
+          # used by tray_manager
+          sudo apt-get install -y libayatana-appindicator3-dev
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
