--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   slang_flutter: ^4.6.0
   syncfusion_flutter_sliders: ^28.2.12
   synchronized: ^3.3.1
+  tray_manager: ^0.4.0
   url_launcher: ^6.3.1
   uuid: ^4.5.1
 
