--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -53,6 +53,7 @@ parts:
       - libgtk-3-dev
       - liblzma-dev
       - libstdc++-12-dev
+      - libayatana-appindicator3-dev
     build-environment:
       - FLUTTER_REPO: https://github.com/flutter/flutter.git
       - FLUTTER_VERSION: 3.29.2
